--- a/src/AppBundle/Resources/config/command.yml
+++ b/src/AppBundle/Resources/config/command.yml
@@ -1,6 +1,6 @@
 services:
     bets.update:
-      class: AppBundle\Command\BetUpdate
+      class: AppBundle\Command\BetUpdateCommand
       arguments:
         - '@service.parser'
         - '@logger'
