--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "doctrine/doctrine-migrations-bundle": "^1.0"
+        "doctrine/doctrine-migrations-bundle": "^1.0",
+        "symfony/dependency-injection": "^3.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
