DEV-1: data resolver in progress

--- a/src/AppBundle/Resources/config/parameters.yml
+++ b/src/AppBundle/Resources/config/parameters.yml
@@ -2,7 +2,9 @@ parameters:
     service_configuration:
         betsbc:
             base_url: 'http://www.betsbc.com/api/v1/bets/line'
-            proxy: '89.107.58.215:443'
+            proxy:
+                ip: '89.107.58.215'
+                port: '443'
             service_name: 'betbc'
             query_parameters_map:
                 rev: '5'
