DEV-2: ui generating js and css added

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 
 # Composer PHAR
 /composer.phar
+
+# assets
+/web/public/.sass-cache/
+/web/public/dist/
+/web/assets/node_modules
+/web/public/*
