--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,5 @@
 /web/public/.sass-cache/
 /web/public/dist/
 /web/assets/node_modules
-/web/public/*
+/web/public/styles.css
+/web/public/bundle-app.js
