--- a/web/assets/package.json
+++ b/web/assets/package.json
@@ -23,6 +23,12 @@
     "style-loader": "^0.13.1",
     "ts-loader": "^1.2.0",
     "typescript": "^2.0.9",
+    "vue-class-component": "^3.2.0",
+    "vue-hot-reload-api": "^2.0.6",
     "webpack": "^1.13.3"
+  },
+  "dependencies": {
+    "vue": "^1.0.28",
+    "vue-typescript": "^0.7.0"
   }
 }
