--- a/web/assets/package.json
+++ b/web/assets/package.json
@@ -17,12 +17,13 @@
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "jquery": "^3.1.1",
     "node-sass": "^3.12.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.2.0",
-    "typescript": "^2.0.9",
+    "typescript": "^2.0.10",
     "vue-class-component": "^3.2.0",
     "vue-hot-reload-api": "^2.0.6",
     "webpack": "^1.13.3"
