DEV-2: continue, Data Extractor Interfaces decorator

--- a/src/AppBundle/Resources/config/common.yml
+++ b/src/AppBundle/Resources/config/common.yml
@@ -1,1 +1,6 @@
 services:
+    breaking_bet.object_builder.jms:
+        class: AppBundle\Internal\ObjectBuilder\JMSObjectBuilder
+        arguments:
+            - '@jms_serializer'
+            - '@logger'
