--- a/src/AppBundle/Resources/config/operation/bet/get.yml
+++ b/src/AppBundle/Resources/config/operation/bet/get.yml
@@ -5,8 +5,11 @@ services:
     breaking_bet.operation.bet.get.http_to_api_transformer:
         class: AppBundle\Interaction\Transformer\Request\Transformer
         arguments:
-            - '@'
+            - '@breaking_bet.object_builder.jms'
             - '@breaking_bet.operation.bet.get.request_factory'
 
     breaking_bet.operation.bet.get.request_factory:
         class: AppBundle\Operation\Bet\Get\Dto\Request\ApiRequestFactory
+
+    breaking_bet.operation.bet.get.api_to_http_transformer:
+        class: AppBundle\Operation\Bet\Get\Transformer\Response\Transformer
