--- a/src/AppBundle/Resources/config/common.yml
+++ b/src/AppBundle/Resources/config/common.yml
@@ -4,3 +4,33 @@ services:
         arguments:
             - '@jms_serializer'
             - '@logger'
+
+    breaking_bet.interaction.data_extractor.assert_decorator:
+        class: AppBundle\Interaction\DataExtractor\AssertDataExtractorDecorator
+        arguments:
+            - '@breaking_bet.interaction.data_extractor.http_request.composite'
+            - 'Symfony\Component\HttpFoundation\Request'
+
+    breaking_bet.interaction.data_extractor.http_request.composite:
+        class: AppBundle\Interaction\DataExtractor\DataExtractorComposite
+        arguments:
+            -
+                - '@breaking_bet.interaction.data_extractor.http_request.json'
+                - '@breaking_bet.interaction.data_extractor.http_request.url'
+
+    breaking_bet.interaction.data_extractor.http_request.json:
+        class: AppBundle\Interaction\DataExtractor\Request\JsonDataExtractor
+
+    breaking_bet.interaction.data_extractor.http_request.post:
+        class: AppBundle\Interaction\DataExtractor\Request\PostDataExtractor
+
+    breaking_bet.interaction.data_extractor.http_request.get:
+        class: AppBundle\Interaction\DataExtractor\Request\GetDataExtractor
+
+    breaking_bet.interaction.data_extractor.http_request.url:
+        class: AppBundle\Interaction\DataExtractor\Request\UrlDataExtractor
+        arguments:
+            - '@router'
+
+    breaking_bet.interaction.api_to_http_transformer:
+        class: AppBundle\Interaction\Transformer\Response\Transformer
