--- a/src/AppBundle/Resources/config/common.yml
+++ b/src/AppBundle/Resources/config/common.yml
@@ -34,6 +34,11 @@ services:
 
     breaking_bet.interaction.api_to_http_transformer:
         class: AppBundle\Interaction\Transformer\Response\Transformer
+        arguments:
+            - '@breaking_bet.interaction.object_to_array_transformer'
+
+    breaking_bet.interaction.object_to_array_transformer:
+        class: AppBundle\Interaction\Transformer\Type\ObjectToArrayTransformer
 
     breaking_bet.entity.repository.factory:
         class: AppBundle\Entity\Repository\RepositoryFactory
