--- a/web/assets/package.json
+++ b/web/assets/package.json
@@ -2,10 +2,12 @@
   "name": "drop_dope",
   "version": "1.0.0",
   "description": "bets stuff",
+  "repository": "https://github.com/pizzamanblabla/breaking_bet.git",
   "scripts": {
     "cleanup": "rm -rf ./node_modules/",
     "build-dev": "./node_modules/.bin/webpack --config webpack-dev.config.js",
     "build-prod": "./node_modules/.bin/webpack --config webpack.config.js",
+    "watch-prod": "./node_modules/.bin/webpack --config webpack-typescript-prod.config.js --watch",
     "build": "npm run build-prod"
   },
   "author": "Evgeny Berezkin",
@@ -17,19 +19,19 @@
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "jquery": "^3.1.1",
     "node-sass": "^3.12.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.2",
+    "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.2.0",
-    "typescript": "2.1.4",
-    "vue-class-component": "^3.2.0",
-    "vue-hot-reload-api": "^2.0.6",
+    "typescript": "^2.1.4",
     "webpack": "^1.13.3"
   },
   "dependencies": {
-    "vue": "^1.0.28",
-    "vue-typescript": "^0.7.0"
+    "@types/react": "^0.14.55",
+    "@types/react-dom": "^0.14.19",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   }
 }
