--- a/web/assets/tsconfig.json
+++ b/web/assets/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es5",
     "module": "commonjs",
     "sourceMap": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "jsx": "react"
   },
   "exclude": [
     "node_modules"
