--- a/web/assets/package.json
+++ b/web/assets/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/es6-promise": "0.0.32",
     "awesome-typescript-loader": "3.0.0-beta.10",
+    "babel-preset-es2015": "^6.18.0",
     "concurrently": "^3.1.0",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
