--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "doctrine/doctrine-migrations-bundle": "^1.0",
         "symfony/dependency-injection": "^3.1",
-        "jms/serializer-bundle": "^1.1"
+        "jms/serializer-bundle": "^1.1",
+        "phpunit/phpunit": "^5.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
