--- a/src/BreakingBetBundle/Resources/config/operation/bet/update.yml
+++ b/src/BreakingBetBundle/Resources/config/operation/bet/update.yml
@@ -1,3 +1,14 @@
 services:
+    breaking_bet.bet.update.service.trnasactional:
+        class: BreakingBetBundle\Internal\Service\Transactional
+        arguments:
+            - '@breaking_bet.bet.update.service'
+            - '@doctrine.orm.entity_manager'
+            - '@logger'
+
     breaking_bet.bet.update.service:
         class: BreakingBetBundle\Operation\Bet\Update\Service\Service
+        arguments:
+            - '@doctrine.orm.entity_manager'
+            - '@breaking_bet.entity.repository.factory'
+            - '@logger'
