--- a/src/BreakingBetBundle/Resources/config/common.yml
+++ b/src/BreakingBetBundle/Resources/config/common.yml
@@ -1,14 +1,20 @@
 services:
+    breaking_bet.guzzle.client:
+        class: GuzzleHttp\Client
+
     breaking_bet.object_builder.jms:
         class: BreakingBetBundle\Internal\ObjectBuilder\JMSObjectBuilder
         arguments:
             - '@jms_serializer'
             - '@logger'
 
+    breaking_bet.object_normalizer:
+        class: Symfony\Component\Serializer\Normalizer\ObjectNormalizer
+
     breaking_bet.interaction.api_to_http_transformer:
         class: BreakingBetBundle\Interaction\Transformer\Response\Json
         arguments:
-            - '@breaking_bet.interaction.object_to_array_transformer'
+            - '@breaking_bet.object_normalizer'
 
     breaking_bet.interaction.object_to_array_transformer:
         class: BreakingBetBundle\Interaction\Transformer\Type\ObjectToArrayTransformer
@@ -16,4 +22,13 @@ services:
     breaking_bet.entity.repository.factory:
         class: BreakingBetBundle\Entity\Repository\RepositoryFactory
         arguments:
-            - '@doctrine.orm.entity_manager'
+            - '@doctrine.orm.default_entity_manager'
+
+    breaking_bet.data_extractor.blank:
+        class: BreakingBetBundle\Internal\DataExtractor\Blank
+
+    breaking_bet.payload_modifier.blank:
+        class: BreakingBetBundle\Internal\PayloadModifier\Blank
+
+    breaking_bet.payload_modifier.json:
+        class: BreakingBetBundle\Internal\PayloadModifier\Json
