--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "symfony/dependency-injection": "^3.1",
         "jms/serializer-bundle": "^1.1",
         "phpunit/phpunit": "^5.7",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "megahertz/guzzle-tor": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
