--- a/src/BreakingBetBundle/Resources/config/command.yml
+++ b/src/BreakingBetBundle/Resources/config/command.yml
@@ -2,7 +2,16 @@ services:
     bets.update:
         class: BreakingBetBundle\Command\Bet\Update
         arguments:
-            - '@breaking_bet.bet.update.service.trnasactional'
+            - '@breaking_bet.bet.update.service.transactional'
+            - '@breaking_bet.entity.repository.factory'
+            - '@logger'
+        tags:
+            - { name: console.command }
+
+    drawdown.calculate:
+        class: BreakingBetBundle\Command\Drawdown\Calculate
+        arguments:
+            - '@breaking_bet.drawdown.calculate.service.transactional'
             - '@breaking_bet.entity.repository.factory'
             - '@logger'
         tags:
