--- a/src/BreakingBetBundle/Resources/config/controllers.yml
+++ b/src/BreakingBetBundle/Resources/config/controllers.yml
@@ -1,9 +1,9 @@
 services:
-    controller.api:
+    controller.drawdown.bet.api:
         class: BreakingBetBundle\Controller\ApplicationController
         arguments:
-            - '@breaking_bet.operation.bet.get.http_to_api_transformer'
+            - '@breaking_bet.common.transformer.http_to_api'
             - '@validator'
-            - '@breaking_bet.operation.bet.get.service'
+            - '@breaking_bet.drawdown.get.service'
             - '@breaking_bet.interaction.api_to_http_transformer'
             - '@logger'
