--- a/src/BreakingBetBundle/Resources/config/controllers.yml
+++ b/src/BreakingBetBundle/Resources/config/controllers.yml
@@ -1,8 +1,8 @@
 services:
-    controller.drawdown.bet.api:
+    controller.drawdown.get.api:
         class: BreakingBetBundle\Controller\ApplicationController
         arguments:
-            - '@breaking_bet.common.transformer.http_to_api'
+            - '@breaking_bet.drawdown.get.transformer.http_to_api'
             - '@validator'
             - '@breaking_bet.drawdown.get.service'
             - '@breaking_bet.interaction.api_to_http_transformer'
