--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "jms/serializer-bundle": "^1.1",
         "phpunit/phpunit": "^5.7",
         "guzzlehttp/guzzle": "^6.2",
-        "megahertz/guzzle-tor": "^1.0"
+        "megahertz/guzzle-tor": "^1.0",
+        "boldtrn/jsonb-bundle": "~1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
